styles/4_css-responsive.css
@media all and (max-width: 1024px) {
  /* Links always have an underline, because there is no hover state. */
  a, a:visited, a:hover { text-decoration: underline; }
}



@media all and (min-width: 941px) {
  .subcontent:last-child {
    margin-right: 0;
    margin-left: 20px;
    padding-right: 0;
  }
}



@media all and (max-width: 940px) {

  nav .pos { padding: 20px 0; }
  nav ul { display: block; }

  .block-text h1 { font-size: 2.84em; }

  .blog h1 {
    font-size: 2em;
  }

  .block-large > .body > h2 { font-size: 30px; }

  .container,
  #footer > section { width: 620px; }

  .block-large .visual { width: 300px; }
  .block-small:nth-of-type(2) { margin-right: 0 }

  .block-small:nth-of-type(3), #footer .block-small:nth-of-type(3) { width: 620px; padding-top: 40px;}

  .block-with-icons { height: auto; margin-bottom: 20px; }
  .block-with-icons:nth-of-type(3) .body { float: none; }

  .subcontent {
    width: 100%;
    border-top: solid #CCC 1px;
    margin: 40px 0px 0px;
    padding: 40px 0px 0px;
    overflow: hidden;
  }

  .subcontent h2 {
    float: left;
    margin: 14px 0px 0px;
  }

  .subcontent p,
  .subcontent ul {
    float: right;
    width: 350px;
  }

  #facts .block-small { width: 200px; }
  #facts .block-small .body { width: 100%; }
  /* end 940 */
}



@media all and (max-width: 620px) {

  .block-large { padding: 40px 0; }

  .block-text h1 { font-size: 37px; }

  #header { margin-bottom: 0;}

  .container,
  #footer > section,
  #footer .block-small,
  #footer .block-small .body,
  #footer .block-small .visual { width: 460px; }
  #footer .block-small { margin-bottom: 40px; }
  #footer .block-small:nth-of-type(3) { width: 460px; padding-top: 0;}

  .block-large .visual { width: 300px; }

  .block-large .body,
  .block-large .visual,
  .block-large .block-small,
  .block-large .block-small .body,
  .block-large .block-small .visual,
  .block-large .intro { width: 460px; }
  .block-large .body { width: 100%; }

  .block-small:nth-of-type(1),
  .block-small:nth-of-type(2) { margin-right: 0 }
  .block-small { float: none; }
  .block-small .visual { display: none; }
  .block-small:first-child h2 { margin-top: 0; }

  .block-with-icons { margin-bottom: -16px; padding-bottom: 50px; }
  .block-with-icons:nth-of-type(3) { padding-bottom: 0px; }

  #colleagues {
    margin-right: 0px;
  }

  #colleagues ol li {
    float: none;
    width: 100%;
    height: 60px;
    margin: 0 0 6px 0;
    padding-bottom: 65px;
    border-bottom: 1px solid #aaa;
  }

  #colleagues ol li > img {
    width: 60px;
    height: 60px;
  }
  #colleagues ol li > .name {
    margin-left: 70px;
    color: #000;
    text-shadow: none;
    top: 0px;
    background: none;
    font: 25px 'Permanent Marker', cursive;
    position: relative;
  }

  #colleagues ol li > .contactData {
    display: block;
  }

  #colleagues ol li .contactData {
    position: relative;
    display: block;
    margin: 0px 0 0 79px;
    font-size: 12px;
  }

  .fb_iframe_widget,
  .fb_iframe_widget > span,
  .fb-comments iframe[style],
  .fb-comments iframe {width: 100% !important;}

  .subcontent {
    width: 100%;
    border-top: solid #CCC 1px;
    margin: 40px 0px 0px;
    padding: 40px 0px 0px;
  }

  .subcontent h2 {
    float: none;
  }

  .subcontent p,
  .subcontent ul {
    float: none;
    width: auto;
  }

  #facts .block-small { width: 100%; }

  .intro-outro { padding: 40px 0; }
  .intro-outro ul { width: 450px;}
  .intro-outro li { margin: 0;}

  /* end 620 */
}



@media all and (max-width: 480px) {

  body {
    background: #eee;
  }

  .block-large h2 {
    padding-left: 0;
  }

  .blog h1, .subcontent h2, .socialShare {
    padding: 0 16px;
  }

  .block-text h1 { font-size: 39px; }

  #mobile-menu-icon {
    display: block;
    position: absolute;
    z-index: 5;
    top: 1em; left: 1em;
    color: white;
    cursor: pointer;
  }
  #mobile-menu-icon:hover { color: #ffc;}
  #mobile-menu-icon:active { -webkit-transform: scale(0.9);}
  #header ul {
    position: absolute;
    top: 0; left: 0;
    z-index: 6;
    width: 150px;
    margin-top: 0;
    -webkit-transform: translateX(-100%);
    -moz-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
    -webkit-transition: ease-in-out -webkit-transform .2s;
    -moz-transition: ease-in-out -moz-transform .2s;
    -ms-transition: ease-in-out -ms-transform .2s;
    transition: ease-in-out transform .2s;
  }
  /* show Home link */
  header ul li:first-child { display: block; }
  body.show-mobile-menu {
    overflow-x: hidden;
  }
  body.show-mobile-menu #page {
    -webkit-transform: translateX(150px);
    -moz-transform: translateX(150px);
    -ms-transform: translateX(150px);
    transform: translateX(150px);
  }
  #header li {
    display: block;
    margin: 0;
    line-height: 25px;
  }
  #header li a {
    display: block;
    padding: 10px;
    color: #000;
    text-shadow: none;
    border-bottom: solid 1px #ccc;
    text-align: left;
  }
  #header li a:hover {
    background-color: #fff;
    color: #555;
  }
  #header li a:active {
    background: -webkit-linear-gradient(top, #ccc, #eee);
    color: #555;
  }
  .lights-off #header li a:hover {
    background-color: #444;
    color: #ddd;
  }
  .lights-off #header li a {
    border-bottom-color: #444;
  }


  header h1,
  .body,
  .block-small > p,
  .block-small > ul,
  .block-large .intro > p
  { padding: 0px 16px; }

  .block-large .intro { float: none; }

  .block-small > ul, #blog-sidebar ul {
    padding-left: 40px;
  }

  #footer .iconList { margin-left: 0px; }

  .block-with-icons h2 { padding: 0px; }

  body section,
  .block-large .body,
  .block-large .visual,
  .block-large .block-small,
  .block-large .block-small .body,
  .block-large .intro,
  .block-large .block-small .visual { width: 100%; }

  .container,
  #footer > section { width: 100%; }
  .readmore { margin-right: 10px; }

  #header { height: 110px;}
  #header li:last-child { margin: 0; }
  #logo img { width: 46px; height: 70px;}


  #footer section,
  #footer .block-small,
  #footer .block-small .body,
  #footer .block-small .visual { width: 100%; }
  #footer .block-small:nth-of-type(3) { width: 100%; padding-top: 0;}
  #footer > section > h1 { font-size: 40px; }
  #footer h2  { padding-left: 16px; }

  #blog-posts { float: none;}
  #blog-posts img { max-width: 100%;}
  #blog-posts h1 { font-size: 1.5em;}

  .intro-outro h1 { font-size: 2em; }
  .intro-outro p { font-size: 1em; }
  .intro-outro ul { width: 150px; }
  .intro-outro li { float: none; margin-bottom: 1em;}

  #colleagues .intro + aside { display: none; }

}
/* end 480 */

